# AgentForge

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/agents/: critic.py  executor.py  orchestrator.py  planner.py
backend/app/agents/prompts/: critic.py  executor.py  planner.py
backend/app/api/: deps.py
backend/app/api/middleware/: auth.py  logging.py  rate_limit.py  security.py
backend/app/api/routes/: auth.py  health.py  tasks.py  websocket.py
backend/app/core/: config.py  exceptions.py  guardrails.py  security.py
backend/app/db/: models.py  session.py
backend/app/memory/: chroma.py
backend/app/queue/: redis_client.py
backend/app/schemas/: __init__.py  agent.py  auth.py  task.py
backend/app/tools/: code_executor.py  file_tool.py  web_search.py
backend/tests/: conftest.py
backend/tests/ingestion/: test_task_ingestion.py  test_user_ingestion.py
backend/tests/integration/api/: test_health.py  test_tasks.py  test_websocket.py
backend/tests/test_agents/: test_critic.py  test_executor.py  test_planner.py
backend/tests/test_api/: test_auth.py  test_tasks.py
backend/tests/test_core/: test_config.py  test_guardrails.py  test_security.py
backend/tests/test_tools/: test_code_executor.py
backend/tests/unit/agents/: test_critic.py  test_orchestrator.py  test_planner.py
backend/tests/unit/core/: test_config.py  (+2 more)
docs/: api.md  (+5 more)
(+80 files in other folders)
